Overflow issue

--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -22,6 +22,7 @@
     &--columns {
       position: relative;
       z-index: 20;
+      overflow: visible;
     }
 
     &.-active {
